# chainlink

./: plan.md
.chainlink/: hook-config.json
chainlink/: Cargo.toml
chainlink/.chainlink/: issues.db
chainlink/src/: db.rs  lib.rs  main.rs
chainlink/src/commands/: mod.rs  plugin.rs
chainlink/src/plugin/: config.rs  github.rs  jira.rs  linear.rs  mod.rs  sync.rs
vscode-extension/: package-lock.json
