[package]
name = "chainlink-tracker"
version = "0.1.3"
edition = "2021"
description = "A lean issue tracker CLI for AI-assisted development sessions"
license = "MIT"
repository = "https://github.com/dollspace-gay/chainlink"
homepage = "https://github.com/dollspace-gay/chainlink"
readme = "../README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "build.rs",
    "LICENSE",
]

[lib]
name = "chainlink"
path = "src/lib.rs"

[[bin]]
name = "chainlink"
path = "src/main.rs"

[features]
default = []
jira = ["reqwest", "base64"]
github = ["reqwest"]
linear = ["reqwest"]
all-plugins = ["jira", "github", "linear"]

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
